--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			<input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
             <p id="verification"></p>
-            <button type="button" onclick="login()">Log in</button>
-            <button type="button" onclick="signUp()">Sign up</button>
+            <button type="button" onclick="session.setLogin()">Log in</button>
+            <button type="button" onclick="session.setUser()">Sign up</button>
         </form>
         <div id="div1">
-
+            
         </div>
         <footer>
             <p>Isak &copy;</p>
